--- a/Goofbot/packages.config
+++ b/Goofbot/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FuzzySharp" version="2.0.2" targetFramework="net48" />
   <package id="Magick.NET.Core" version="12.2.1" targetFramework="net48" />
   <package id="Magick.NET-Q16-AnyCPU" version="12.2.1" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net48" />
